@@ -175,6 +175,9 @@
                 - creme.ajax.params() is deprecated; Use _.encodeURLSearch() instead
                 - creme.ajax.decodeSearchData() is deprecated; Use _.decodeURLSearchData() instead
                 - creme.utils.confirmSubmit() is deprecated; Use the new 'creme_core-hatmenubar-update-redirect' or 'delete' actions instead.
+                - creme.utils.showPageLoadOverlay() is deprecated;  Use creme.dialog.Overlay instead.
+                - creme.utils.hidePageLoadOverlay() is deprecated;  Use creme.dialog.Overlay instead.
+                - creme.utils.overlay() is deprecated;  Use creme.dialog.Overlay instead.
         # In 'creme_core.models' :
             - The model 'CremeUser' :
                 - gets a new field 'uuid'.
